; ModuleID = '/home/carl/AnghaBench/freebsd/sys/ufs/ffs/extr_ffs_suspend.c_ffs_susp_dtor.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/ufs/ffs/extr_ffs_suspend.c_ffs_susp_dtor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fs = type { i32 }
%struct.ufsmount = type { %struct.fs* }
%struct.mount = type { i32 }

@ffs_susp_lock = common dso_local global i32 0, align 4
@MNTK_SUSPEND = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"MNTK_SUSPEND not set\00", align 1
@curthread = common dso_local global i32 0, align 4
@FFSR_FORCE = common dso_local global i32 0, align 4
@FFSR_UNSUSPEND = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [33 x i8] c"failed to unsuspend writes on %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @ffs_susp_dtor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ffs_susp_dtor(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.fs*, align 8
  %4 = alloca %struct.ufsmount*, align 8
  %5 = alloca %struct.mount*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %7 = call i32 @sx_xlock(i32* @ffs_susp_lock)
  %8 = load i8*, i8** %2, align 8
  %9 = bitcast i8* %8 to %struct.mount*
  store %struct.mount* %9, %struct.mount** %5, align 8
  %10 = load %struct.mount*, %struct.mount** %5, align 8
  %11 = call %struct.ufsmount* @VFSTOUFS(%struct.mount* %10)
  store %struct.ufsmount* %11, %struct.ufsmount** %4, align 8
  %12 = load %struct.ufsmount*, %struct.ufsmount** %4, align 8
  %13 = getelementptr inbounds %struct.ufsmount, %struct.ufsmount* %12, i32 0, i32 0
  %14 = load %struct.fs*, %struct.fs** %13, align 8
  store %struct.fs* %14, %struct.fs** %3, align 8
  %15 = load %struct.mount*, %struct.mount** %5, align 8
  %16 = call i64 @ffs_susp_suspended(%struct.mount* %15)
  %17 = icmp eq i64 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %1
  %19 = call i32 @sx_xunlock(i32* @ffs_susp_lock)
  br label %46

20:                                               ; preds = %1
  %21 = load %struct.mount*, %struct.mount** %5, align 8
  %22 = getelementptr inbounds %struct.mount, %struct.mount* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i32, i32* @MNTK_SUSPEND, align 4
  %25 = and i32 %23, %24
  %26 = icmp ne i32 %25, 0
  %27 = zext i1 %26 to i32
  %28 = call i32 @KASSERT(i32 %27, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  %29 = load %struct.mount*, %struct.mount** %5, align 8
  %30 = load i32, i32* @curthread, align 4
  %31 = load i32, i32* @FFSR_FORCE, align 4
  %32 = load i32, i32* @FFSR_UNSUSPEND, align 4
  %33 = or i32 %31, %32
  %34 = call i32 @ffs_reload(%struct.mount* %29, i32 %30, i32 %33)
  store i32 %34, i32* %6, align 4
  %35 = load i32, i32* %6, align 4
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %42

37:                                               ; preds = %20
  %38 = load %struct.fs*, %struct.fs** %3, align 8
  %39 = getelementptr inbounds %struct.fs, %struct.fs* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = call i32 @panic(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0), i32 %40)
  br label %42

42:                                               ; preds = %37, %20
  %43 = load %struct.mount*, %struct.mount** %5, align 8
  %44 = call i32 @ffs_susp_unsuspend(%struct.mount* %43)
  %45 = call i32 @sx_xunlock(i32* @ffs_susp_lock)
  br label %46

46:                                               ; preds = %42, %18
  ret void
}

declare dso_local i32 @sx_xlock(i32*) #1

declare dso_local %struct.ufsmount* @VFSTOUFS(%struct.mount*) #1

declare dso_local i64 @ffs_susp_suspended(%struct.mount*) #1

declare dso_local i32 @sx_xunlock(i32*) #1

declare dso_local i32 @KASSERT(i32, i8*) #1

declare dso_local i32 @ffs_reload(%struct.mount*, i32, i32) #1

declare dso_local i32 @panic(i8*, i32) #1

declare dso_local i32 @ffs_susp_unsuspend(%struct.mount*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
